--- a/src/SoundUtils.csproj
+++ b/src/SoundUtils.csproj
@@ -59,11 +59,13 @@
     <Compile Include="FFTFiltering.cs" />
     <Compile Include="FilterBuffer.cs" />
     <Compile Include="FilterType.cs" />
+    <Compile Include="Impulse\Impulse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SoundFilter.cs" />
     <Compile Include="SoundMath.cs" />
     <Compile Include="Window.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
