--- a/src/SoundUtils.csproj
+++ b/src/SoundUtils.csproj
@@ -55,15 +55,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Channel.cs" />
-    <Compile Include="FastFourier.cs" />
-    <Compile Include="FFTFiltering.cs" />
-    <Compile Include="FilterBuffer.cs" />
-    <Compile Include="FilterType.cs" />
-    <Compile Include="Impulse\Impulse.cs" />
+    <Compile Include="Math\FastFourier.cs" />
+    <Compile Include="Filtering\FFTFiltering.cs" />
+    <Compile Include="Filtering\FilterBuffer.cs" />
+    <Compile Include="Filtering\FilterType.cs" />
+    <Compile Include="Filtering\FIR\ImpulseResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SoundFilter.cs" />
-    <Compile Include="SoundMath.cs" />
-    <Compile Include="Window.cs" />
+    <Compile Include="Filtering\SoundFilter.cs" />
+    <Compile Include="Math\SoundMath.cs" />
+    <Compile Include="Math\Window.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
