--- a/src/SoundUtils.csproj
+++ b/src/SoundUtils.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Channel.cs" />
     <Compile Include="Filtering\FIR\LowPassFilter.cs" />
+    <Compile Include="Filtering\FIR\HighPassFilter.cs" />
     <Compile Include="Filtering\FIR\BandFilter.cs" />
     <Compile Include="Filtering\FIR\CutoffFilter.cs" />
     <Compile Include="Math\FastFourier.cs" />
