--- a/src/SoundUtils.csproj
+++ b/src/SoundUtils.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Filtering\FIR\LowPassFilter.cs" />
     <Compile Include="Filtering\FIR\HighPassFilter.cs" />
     <Compile Include="Filtering\FIR\BandPassFilter.cs" />
+    <Compile Include="Filtering\FIR\BandEliminationFilter.cs" />
     <Compile Include="Filtering\FIR\BandFilter.cs" />
     <Compile Include="Filtering\FIR\CutoffFilter.cs" />
     <Compile Include="Math\FastFourier.cs" />
