WaveFormatWriterクラスを追加

--- a/src/SoundUtils.csproj
+++ b/src/SoundUtils.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Filtering\FIR\BandFilter.cs" />
     <Compile Include="Filtering\FIR\CutoffFilter.cs" />
     <Compile Include="Filtering\FIR\CombFilter.cs" />
+    <Compile Include="IO\WaveFormatWriter.cs" />
     <Compile Include="Math\FastFourier.cs" />
     <Compile Include="Filtering\FFTFiltering.cs" />
     <Compile Include="Filtering\FilterBuffer.cs" />
