--- a/src/SoundUtils.csproj
+++ b/src/SoundUtils.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="BitOperate.cs" />
     <Compile Include="Channel.cs" />
+    <Compile Include="Filtering\FIR\FiniteImpulseResponse.cs" />
     <Compile Include="Filtering\FIR\LowPassFilter.cs" />
     <Compile Include="Filtering\FIR\HighPassFilter.cs" />
     <Compile Include="Filtering\FIR\BandPassFilter.cs" />
