--- a/src/SoundUtils.csproj
+++ b/src/SoundUtils.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Filtering\FIR\BandFilter.cs" />
     <Compile Include="Filtering\FIR\CutoffFilter.cs" />
     <Compile Include="Filtering\FIR\CombFilter.cs" />
+    <Compile Include="Filtering\FIR\ImpulseGenerator.cs" />
     <Compile Include="Filtering\OverSampling.cs" />
     <Compile Include="IO\WaveFormatWriter.cs" />
     <Compile Include="Math\FastFourier.cs" />
