InfiniteImpulseResponseクラスを追加

--- a/src/SoundUtils.csproj
+++ b/src/SoundUtils.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Filtering\FIR\CutoffFilter.cs" />
     <Compile Include="Filtering\IIR\CombFilter.cs" />
     <Compile Include="Filtering\FIR\ImpulseGenerator.cs" />
+    <Compile Include="Filtering\IIR\InfiniteImpulseResponse.cs" />
     <Compile Include="Filtering\OverSampling.cs" />
     <Compile Include="IO\WaveFormatWriter.cs" />
     <Compile Include="Math\FastFourier.cs" />
