--- a/src/SoundUtils.csproj
+++ b/src/SoundUtils.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Filtering\IIR\CombFilter.cs" />
     <Compile Include="Filtering\FIR\ImpulseGenerator.cs" />
     <Compile Include="Filtering\IIR\InfiniteImpulseResponse.cs" />
+    <Compile Include="Filtering\IIR\Resonator.cs" />
     <Compile Include="Filtering\OverSampling.cs" />
     <Compile Include="IO\WaveFormatWriter.cs" />
     <Compile Include="Math\FastFourier.cs" />
