--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ChannelTest.cs" />
     <Compile Include="BitOperateTest.cs" />
+    <Compile Include="ArrayConvertTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\SoundUtils.csproj">
