--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -70,6 +70,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Math\WindowTest.cs" />
     <Compile Include="Math\SoundMathTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ChannelTest.cs" />
