:+1: サンプリング周波数の例外を追加

--- a/src/SoundUtils.csproj
+++ b/src/SoundUtils.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="BitOperate.cs" />
     <Compile Include="Channel.cs" />
+    <Compile Include="Exceptions.cs" />
     <Compile Include="Filtering\FIR\FiniteImpulseResponse.cs" />
     <Compile Include="Filtering\FIR\LowPassFilter.cs" />
     <Compile Include="Filtering\FIR\HighPassFilter.cs" />
